# NovaLang

./: .gitignore  ASTParser.cpp  ASTParser.h  CMakeLists.txt  CodeGen.cpp  Context.cpp  Context.h  Error.cpp  Error.h  LICENSE  Lexer.cpp  Lexer.h  README.md  README_CN.md  TypeChecker.cpp  TypeChecker.h  capture_expected.sh  input.nova  main.cpp  requirements.sh  run_test.sh  run_tests.sh  test.nova  test.sh
AST/: ASTNode.cpp  ASTNode.h  Annotation.cpp  Annotation.h  Assign.cpp  Assign.h  BinOp.cpp  BinOp.h  BoolLiteral.cpp  BoolLiteral.h  Call.cpp  Call.h  Common.cpp  Common.h  CompoundAssign.cpp  CompoundAssign.h  DictLiteral.cpp  DictLiteral.h  FloatLiteral.cpp  FloatLiteral.h  For.cpp  For.h  Function.cpp  Function.h  Global.cpp  Global.h  If.cpp  If.h  Increment.cpp  Increment.h  IndexAccess.cpp  IndexAccess.h  IndexAssign.cpp  IndexAssign.h  IntLiteral.cpp  IntLiteral.h  ListLiteral.cpp  ListLiteral.h  NoOp.h  Print.cpp  (+19 more)
CodeGen/: CodeGen.cpp  CodeGen.h  CodeGenCore.cpp  CodeGenExpr.cpp  CodeGenFunction.cpp  CodeGenStmt.cpp  CodeGenVar.cpp  RuntimeManager.cpp  RuntimeManager.h
Runtime/: nova_dict.c  nova_dict.h  nova_list.c  nova_list.h  nova_memory_manager.c  nova_memory_manager.h  nova_string.c  nova_string.h  runtime.c  runtime.h  test.c
test/: 01_variables.nova  02_operators.nova  03_conditionals.nova  04_loops.nova  05_functions.nova  06_scope.nova  07_data_structures.nova  08_type_inference.nova  09_error_handling.nova  10_math_operations.nova  11_classes.nova  12_inheritance.nova  13_encapsulation.nova  14_arrays_and_dicts.nova  15_range_and_for.nova  CMakeLists.txt  README.md  README_CN.md
